--- a/charge.css
+++ b/charge.css
@@ -1,4 +1,4 @@
-.battery-top{
+.battery-top {
     width: 30px;
     height: 10px;
     background: black;
@@ -7,39 +7,47 @@
     border-top-right-radius: 8px;
     border-top-left-radius: 8px;
 }
-.battery-content{
+
+.battery-content {
     width: 150px;
     height: 250px;
-    background: black;
+    background: rgb(212, 217, 221);
+
     position: relative;
     margin: 0% auto;
     border: 3px solid silver;
     border-radius: 18px;
 }
-.charge{
-    width:100% ;
+
+.charge {
+    width: 100%;
     position: absolute;
     bottom: 0%;
     border-radius: 14px;
     animation: battery 8s linear infinite;
 }
-@keyframes battery{
+
+@keyframes battery {
     0% {
-      height: 0%;
-      background: red;
+        height: 0%;
+        background: red;
     }
+
     25% {
-        height: 25%;
+        height: 25;
         background: orange;
     }
+
     50% {
-height: 50%;
-background: yellow;
+        height: 50%;
+        background: yellow;
     }
+
     75% {
-height: 75%;
-background: yellowgreen;
+        height: 75%;
+        background: yellowgreen;
     }
+
     100% {
 
         height: 100%;
